aboutUs EN completed (responsive)

--- a/css/en/main.css
+++ b/css/en/main.css
@@ -17,9 +17,13 @@ body {
   z-index: 5;
   left: -0.2em;
   top: -50px;
+  user-select: none;
 }
 .container .smaller {
   font-size: 30rem;
+}
+.container .opac {
+  opacity: 0.2;
 }
 .container .header {
   z-index: 6;
@@ -91,6 +95,71 @@ body {
 .container .header .nav ul li {
   margin: 0 20px;
 }
+.container .hover {
+  color: #c28fb8 !important;
+}
+.container .transparent {
+  background-color: rgba(204, 204, 204, 0.34);
+}
+.container .half-slider {
+  display: flex;
+  flex: 1 1 auto;
+  z-index: 6;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(204, 204, 204, 0.34);
+  position: relative;
+  flex-wrap: wrap;
+}
+.container .half-slider .hs-wrapper {
+  flex: 4 1 0;
+  height: 700px;
+  background: url("../../img/comp.jpg") no-repeat center;
+  background-size: cover;
+  width: 100%;
+}
+.container .half-slider .hs-wrapper .indicator {
+  position: absolute;
+  display: flex;
+  left: 10px;
+  bottom: 20px;
+  flex-direction: column;
+}
+.container .half-slider .hs-wrapper .indicator .sl {
+  width: 10px;
+  height: 25px;
+  background-color: #cccccc;
+  border-radius: 50px;
+  margin: 4px 10px;
+  cursor: pointer;
+}
+.container .half-slider .hs-wrapper .indicator .sl:hover {
+  background-color: #777777;
+}
+.container .half-slider .hs-wrapper .indicator .nsl {
+  width: 10px;
+  margin: 5px 10px;
+  height: 75px;
+  background-color: #777777;
+  border-radius: 50px;
+}
+.container .half-slider .hstext-wrapper {
+  flex: 3 1 0;
+  color: #777777;
+}
+.container .half-slider .hstext-wrapper h1 {
+  padding: 10% 10% 0 10%;
+  font-size: 5rem;
+  margin-block-start: 0;
+  margin-block-end: 0;
+}
+.container .half-slider .hstext-wrapper h6 {
+  padding: 0 10% 10% 10%;
+  margin-block-start: 0;
+  margin-block-end: 0;
+  font-size: 1.5rem;
+  line-height: 1.8;
+}
 .container .portrait {
   width: 100%;
   height: 120vh;
@@ -159,7 +228,7 @@ body {
   color: #a7a7a7;
 }
 .container .slider {
-  height: 120vh;
+  height: 800px;
   background-color: deeppink;
   width: 100%;
   margin-top: 100px;
@@ -167,12 +236,12 @@ body {
 }
 .container .sl1 {
   background-color: darkorange;
-  height: 80vh;
+  height: 800px;
   margin: 0;
 }
 .container .sl2 {
   background-color: darkcyan;
-  height: 80vh;
+  height: 800px;
   margin: 0;
 }
 .container .categories {
@@ -180,6 +249,11 @@ body {
   overflow: hidden;
   position: relative;
   padding-bottom: 60px;
+}
+.container .categories .nonitalic {
+  margin-top: 30px !important;
+  font-style: normal !important;
+  color: white !important;
 }
 .container .categories::before {
   content: "";
@@ -192,7 +266,7 @@ body {
   display: block;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.52) url(../img/1.jpg) no-repeat right -10vw top fixed;
+  background: rgba(255, 255, 255, 0.52) url(../../img/1.jpg) no-repeat right -10vw top fixed;
   background-blend-mode: lighten;
   transform: scale(1.5);
   filter: blur(10px);
@@ -212,16 +286,13 @@ body {
 }
 .container .categories .title:before,
 .container .categories .title:after {
-  background-color: #777777;
   content: "";
   display: inline-block;
-  height: 2px;
+  height: 3px;
+  border-radius: 50px;
   position: relative;
   vertical-align: middle;
   width: 40%;
-}
-.container .categories .title:before,
-.container .categories .title:after {
   background-color: #EEEEEE;
 }
 .container .categories .title:before {
@@ -341,14 +412,60 @@ body {
 .container .categories #three, .container .categories #five {
   background-image: url("../../img/neck.jpg");
 }
+.container .marginbackground {
+  margin: 0;
+  background-image: url("../../img/abdrobad.jpeg");
+  background-size: cover;
+  background-color: rgba(0, 0, 0, 0.56);
+  background-blend-mode: multiply;
+  padding: 0;
+}
+.container .marginbackground h5 {
+  color: #EEEEEE;
+  text-align: center;
+  padding: 20px 12%;
+  line-height: 2;
+}
 .container .noback {
   background: none;
+}
+.container .photo-gallery {
+  display: flex;
+  flex: 1 1 auto;
+  width: 100%;
+  flex-direction: column;
+}
+.container .photo-gallery .fluid {
+  width: 100%;
+  height: 500px;
+}
+.container .photo-gallery .fluid img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.container .photo-gallery .thumbnail {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+.container .photo-gallery .thumbnail .item {
+  background-color: #ce79d3;
+  flex: 1 1 0;
+  height: 200px;
+}
+.container .photo-gallery .thumbnail .item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .container .services {
   display: flex;
   flex: 1 1 0;
   flex-wrap: wrap;
   justify-content: center;
+  white-space: nowrap;
 }
 .container .services .delivery, .container .services .insurance {
   display: flex;
@@ -358,6 +475,9 @@ body {
   align-items: center;
   font-size: 2.5rem;
   font-family: "Segoe UI Semibold", "Lao UI", serif;
+}
+.container .services .delivery h2, .container .services .insurance h2 {
+  padding: 5px;
 }
 .container .services .insurance {
   background-color: #cccccc;
@@ -391,6 +511,128 @@ body {
   width: 200px;
   height: 200px;
   margin: 20px;
+}
+.container .sponsorship .title {
+  margin-top: 20px;
+  padding: 40px 20px;
+  overflow: hidden;
+  text-align: left;
+  color: #777777;
+  font-style: italic;
+  font-size: 2rem;
+}
+.container .sponsorship .title:after {
+  content: "";
+  display: inline-block;
+  height: 3px;
+  border-radius: 50px;
+  position: relative;
+  vertical-align: middle;
+  width: 100%;
+  background-color: #EEEEEE;
+}
+.container .sponsorship .title:after {
+  left: 0.5em;
+  margin-right: -50%;
+}
+.container .sponsorship .row {
+  display: flex;
+  flex: 1 1 0;
+}
+.container .sponsorship .row .text-wrapper {
+  display: flex;
+  flex: 4 1 0;
+  padding: 40px;
+}
+.container .sponsorship .row .image-wrapper {
+  display: flex;
+  flex: 3 1 0;
+  padding: 20px 20px 0 20px;
+  max-height: 300px;
+}
+.container .sponsorship .row .image-wrapper img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.container .description .title {
+  margin-top: 100px;
+  overflow: hidden;
+  text-align: center;
+  color: #777777;
+  font-style: italic;
+  font-size: 2rem;
+}
+.container .description .title:before,
+.container .description .title:after {
+  content: "";
+  display: inline-block;
+  height: 3px;
+  border-radius: 50px;
+  position: relative;
+  vertical-align: middle;
+  width: 38%;
+  background-color: #EEEEEE;
+}
+.container .description .title:before {
+  right: 0.5em;
+  margin-left: -50%;
+}
+.container .description .title:after {
+  left: 0.5em;
+  margin-right: -50%;
+}
+.container .description h5 {
+  padding: 5%;
+  line-height: 2;
+}
+.container .info {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+}
+.container .info .text-wrapper {
+  flex: 1 1 auto;
+}
+.container .info .text-wrapper .title {
+  padding: 0 40px;
+  overflow: hidden;
+  text-align: left;
+  color: #777777;
+  font-style: italic;
+  font-size: 2rem;
+}
+.container .info .text-wrapper .title:after {
+  content: "";
+  display: inline-block;
+  height: 3px;
+  border-radius: 50px;
+  position: relative;
+  vertical-align: middle;
+  width: 100%;
+  background-color: #EEEEEE;
+}
+.container .info .text-wrapper .title:after {
+  left: 0.5em;
+  margin-right: -50%;
+}
+.container .info .text-wrapper .details {
+  padding: 40px;
+}
+.container .info .text-wrapper .details h5, .container .info .text-wrapper .details h6 {
+  margin-block-start: 0;
+  margin-block-end: 0;
+  padding: 10px;
+}
+.container .info .text-wrapper .details h6 {
+  color: #777777;
+}
+.container .info .map-wrapper {
+  flex: 3 1 auto;
+  background: url("../../img/photo galley (8).jpg") no-repeat;
+  background-size: cover;
+  margin: 25px;
+  height: 500px;
 }
 .container .footer {
   background-color: #3e3e46;
@@ -525,6 +767,18 @@ body {
   .container .portrait img, .container .portrait2 img {
     width: 40vw;
   }
+  .container .half-slider .hstext-wrapper {
+    flex: 2 1 50%;
+  }
+  .container .half-slider .hstext-wrapper h1 {
+    font-size: 4rem;
+  }
+  .container .half-slider .hstext-wrapper h6 {
+    font-size: 1.2rem;
+  }
+  .container .half-slider .hs-wrapper {
+    flex: 2 1 50%;
+  }
 }
 @media all and (max-width: 980px) {
   .container .fsymbol {
@@ -533,11 +787,9 @@ body {
   .container .header ul li {
     font-size: 1.1rem;
     margin: 0 15px !important;
-    color: #ce79d3;
   }
   .container .header .lang {
     font-size: 0.8rem;
-    color: #ff40a3;
   }
   .container .header .lang img {
     width: 30px;
@@ -550,16 +802,43 @@ body {
   }
   .container .artboard .title-wrapper h1 {
     font-size: 4.5rem;
-    background-color: #ce79d3;
+  }
+  .container .artboard .title-wrapper h6 {
+    font-size: 1rem;
+  }
+  .container .services h2 {
+    font-size: 2.5rem;
+  }
+  .container .half-slider {
+    text-align: center;
+  }
+  .container .half-slider .hstext-wrapper {
+    flex: 1 1 auto;
+  }
+  .container .half-slider .hstext-wrapper h1 {
+    font-size: 4rem;
+  }
+  .container .half-slider .hstext-wrapper h6 {
+    font-size: 1.2rem;
+  }
+  .container .half-slider .hs-wrapper {
+    flex: 1 1 auto;
+    background-position-y: -100px;
+    height: 500px;
+  }
+  .container .info .map-wrapper {
+    width: 100%;
   }
 }
 @media all and (max-width: 736px) {
+  .container .fsymbol {
+    font-size: 15rem;
+  }
   .container .header {
     justify-content: flex-start !important;
   }
   .container .header ul li {
     margin: 0 5px !important;
-    color: #ce79d3;
   }
   .container .header .lang img {
     width: 20px;
@@ -573,8 +852,26 @@ body {
   .container .portrait2 {
     background-size: cover;
   }
+  .container .artboard .title-wrapper {
+    margin: 0;
+  }
+  .container .artboard .title-wrapper h1 {
+    font-size: 4rem;
+  }
+  .container .artboard .title-wrapper h6 {
+    font-size: 0.8rem;
+  }
+  .container .half-slider .hs-wrapper {
+    height: 400px;
+  }
+  .container .sponsorship .row {
+    flex-direction: column-reverse;
+  }
 }
 @media all and (max-width: 480px) {
+  .container .fsymbol {
+    display: none;
+  }
   .container .header {
     justify-content: center !important;
     flex-direction: column;
@@ -590,6 +887,14 @@ body {
   .container .portrait h2, .container .portrait2 h2 {
     padding: 20px;
     font-size: 1.5rem;
+  }
+  .container .customers h2 {
+    font-size: 2.5rem;
+    text-align: center;
+    padding: 5px;
+  }
+  .container .half-slider .hs-wrapper {
+    height: 200px;
   }
 }
 
